--- a/webapp/src/app.css
+++ b/webapp/src/app.css
@@ -11,6 +11,7 @@ body {
   justify-content: center;
   margin: 0;
   min-height: 100vh;
+  min-height: 100dvh;
   background: #020202;
   color: #fff;
   font-weight: bold;
